<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="#545c67">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/config_five_small"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/setupButton"
            style="@style/btnStyleShakespeare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/btsetup"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_weight="1" />

        <Button
            android:id="@+id/startButton"
            style="@style/btnStyleShakespeare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/btbaslat"
            android:text="@string/start"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/stopButton"
        style="@style/btnStyleShakespeare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/btstop"
        android:text="@string/stop"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="26sp" />
</LinearLayout>
